--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 17.3.x
+      - name: Use Node.js 18
         uses: actions/setup-node@v1
         with:
-          node-version: 17.3.x
+          node-version: 18
       - run: yarn
         env:
           CI: true
