--- a/.github/workflows/static-code-analysis.yml
+++ b/.github/workflows/static-code-analysis.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 17.3.x
+      - name: Use Node.js 18
         uses: actions/setup-node@v1
         with:
-          node-version: 17.3.x
+          node-version: 18
       - run: yarn
       - run: yarn run prettier:check
         env:
