--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -11,7 +11,7 @@
     "react/jsx-filename-extension": "off",
     "react/no-access-state-in-setstate": "off",
     "react/prefer-stateless-function": "warn",
-    "react/prop-types": "error",
+    "react/prop-types": "off",
     "react/state-in-constructor": "off",
     "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": "off"
