--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
@@ -44,5 +44,10 @@
     "**/*.+(css)": [
       "yarn stylelint:check"
     ]
+  },
+  "dependencies": {
+    "@mui/material": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "styled-components": "^6.0.0-rc.1"
   }
 }
