--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     ],
     "import/no-unresolved": "off",
     "import/order": "off",
+    "import/no-default-export": "error",
     "import/prefer-default-export": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "no-console": "error",
