--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -3,7 +3,7 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - feat/deploy
+      - main
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -13,8 +13,5 @@ jobs:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: feat/deploy
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --build-arg REACT_APP_FIREBASE_KEY=${{ secrets.REACT_APP_FIREBASE_KEY }} --remote-only
