--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -13,5 +13,6 @@ jobs:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --build-arg REACT_APP_FIREBASE_KEY=${{ secrets.REACT_APP_FIREBASE_KEY }} --remote-only
